-Worked on styling of component -Make side drawer ready -Make Topbar search and added category selector -Added responsive design

--- a/src/translations/languages/en/translation.json
+++ b/src/translations/languages/en/translation.json
@@ -1,4 +1,7 @@
 {
   "name": "Name",
-  "news": "News"
+  "news": "News",
+  "select_author": "Select Author",
+  "select_source": "Select Source",
+  "search": "Search"
 }
