-Worked on news skeleton -Added article page -Worked on responsive design

--- a/src/translations/languages/en/translation.json
+++ b/src/translations/languages/en/translation.json
@@ -3,5 +3,7 @@
   "news": "News",
   "select_author": "Select Author",
   "select_source": "Select Source",
-  "search": "Search"
+  "search": "Search",
+  "categories": "Categories",
+  "logo": "Logo"
 }
