-Worked on some UI change and filter toggle modification.

--- a/src/translations/languages/en/translation.json
+++ b/src/translations/languages/en/translation.json
@@ -13,5 +13,6 @@
   "yesterday": "Yesterday",
   "this_week": "This Week",
   "this_month": "This Month",
-  "all_time": "All Time"
+  "all_time": "All Time",
+  "no_article_found": "No Article Found"
 }
